tests/snapshots/cli_no_configuration__feature_branch_with_custom_pattern.snap
---
source: tests/cli_no_configuration.rs
description: "* ##SHA## (HEAD -> my-feature/feature) 0.1.0-feature.1\n* ##SHA## (trunk) 0.1.0-pre.1\n* ##SHA## 0.1.0-pre.1\n"
info:
  program: git-versioner
  args:
    - "--feature-branch"
    - my-feature/(?<BranchName>.*)
---
success: true
exit_code: 0
----- stdout -----
{
  "Major": 0,
  "Minor": 1,
  "Patch": 0,
  "MajorMinorPatch": "0.1.0",
  "PreReleaseTag": "feature.1",
  "PreReleaseTagWithDash": "-feature.1",
  "PreReleaseLabel": "feature",
  "PreReleaseLabelWithDash": "-feature",
  "PreReleaseNumber": "1",
  "BuildMetadata": "",
  "SemVer": "0.1.0-feature.1",
  "AssemblySemVer": "0.1.0",
  "FullSemVer": "0.1.0-feature.1",
  "InformationalVersion": "0.1.0-feature.1",
  "BranchName": "my-feature/feature",
  "EscapedBranchName": "my-feature-feature"
}

----- stderr -----
