tests/snapshots/cli_no_configuration__option_custom_main_branch.snap
---
source: tests/cli_no_configuration.rs
description: "* ##SHA## (HEAD -> custom-main) 0.1.0-rc.1\n"
info:
  program: git-versioner
  args:
    - "--main-branch"
    - custom-main
---
success: true
exit_code: 0
----- stdout -----
{
  "Major": 0,
  "Minor": 1,
  "Patch": 0,
  "MajorMinorPatch": "0.1.0",
  "PreReleaseTag": "rc.1",
  "PreReleaseTagWithDash": "-rc.1",
  "PreReleaseLabel": "rc",
  "PreReleaseLabelWithDash": "-rc",
  "PreReleaseNumber": "1",
  "BuildMetadata": "",
  "SemVer": "0.1.0-rc.1",
  "AssemblySemVer": "0.1.0",
  "FullSemVer": "0.1.0-rc.1",
  "InformationalVersion": "0.1.0-rc.1"
}

----- stderr -----
