tests/snapshots/cli_no_configuration__output_from_show_config.snap
---
source: tests/cli_no_configuration.rs
info:
  program: git-versioner
  args:
    - "--show-config"
---
success: true
exit_code: 0
----- stdout -----
Configuration:
Path = "<repository_path>"
MainBranch = "^(trunk|main|master)$"
ReleaseBranch = "^releases?[/-](?<BranchName>.+)$"
FeatureBranch = "^features?[/-](?<BranchName>.+)$"
TagPrefix = "[vV]?"
PreReleaseTag = "pre"
CommitMessageIncrementing = "Disabled"
ContinuousDelivery = false


----- stderr -----
